opam-version: "1.2"
version: "1.0.1"
maintainer: "Andre Nathan <andre@hostnet.com.br>"
authors: ["Andre Nathan <andre@hostnet.com.br>"]
license: "MIT"
homepage: "https://github.com/andrenth/ocaml-srs"
dev-repo: "https://github.com/andrenth/ocaml-srs.git"
bug-reports: "https://github.com/andrenth/ocaml-srs/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
]
